# cp-study

./: .gitignore  LICENSE  README.md  calibration_demo.ipynb  cp.ipynb  cp.py  eda.ipynb  mcp.ipynb  mcp.py  plotly_utils.py  pyproject.toml
models/: cp.py  mcp.py
models/hinge/: cp.py  mcp.py
models/margin/: cp.py
