[tool.poetry]
name = "cp-study"
version = "0.1.0"
description = ""
authors = ["Lucas Leão <heylucasleao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
plotly = "^5.22.0"
venn-abers = "^1.4.2"
scikit-learn = "^1.4.2"
ipykernel = "^6.29.4"
kaleido = "0.2.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
